New Hair: cannot delete hair curves with the Delete Brush when curves have single control points #98101

Closed
opened 2022-05-13 16:42:20 +02:00 by Dalai Felinto · 6 comments

Blender Version
Broken: version: 3.3.0 Alpha, branch: master, commit date: 2022-05-13 10:55, hash: 94ad77100c
Worked: n/a

Short description of error

I cannot delete hair curves with the Delete Brush when curves have single control points.

Exact steps for others to reproduce the error

In this file you can see there are 22 splines with a total of 22 control points. I cannot delete them with the Delete Curves brush.

hair-delete.blend

**Blender Version** Broken: version: 3.3.0 Alpha, branch: master, commit date: 2022-05-13 10:55, hash: `94ad77100c` Worked: n/a **Short description of error** I cannot delete hair curves with the Delete Brush when curves have single control points. **Exact steps for others to reproduce the error** In this file you can see there are 22 splines with a total of 22 control points. I cannot delete them with the Delete Curves brush. [hair-delete.blend](https://archive.blender.org/developer/F13072695/hair-delete.blend)
Author
Owner

Added subscriber: @dfelinto

Added subscriber: @dfelinto
Author
Owner

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Author
Owner

Added subscribers: @HooglyBoogly, @JacquesLucke

Added subscribers: @HooglyBoogly, @JacquesLucke
Author
Owner

Note: This is the file from Project Heist, I have no idea how they manage to have those special curves.

Note: This is the file from Project Heist, I have no idea how they manage to have those special curves.
Hans Goudey self-assigned this 2022-05-13 19:54:00 +02:00

This issue was referenced by f4a01c8a8b

This issue was referenced by f4a01c8a8bfcc948aedf45888d9303b7ce571124
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser Project (Legacy)
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#98101
No description provided.